# pdforge

./: README.md  pyproject.toml
.github/workflows/: ci.yml  errors.yml  realease.yml
pdfix/: __init__.py  __main__.py  cat.py  cli.py  extract_images.py  extract_text.py  meta.py  rm.py  rotate.py  secure.py  watermark.py
pdfmod/: __init__.py  __main__.py  _utils.py  cat.py  cli.py  extract_images.py  extract_text.py  join.py  merge.py  meta.py  rm.py  rotate.py  secure.py  watermark.py
pdforge/: __init__.py  __main__.py  _utils.py  cat.py  cli.py  extract_images.py  extract_text.py  meta.py  parsing.py  rm.py  rotate.py  secure.py  watermark.py
tests/: conftest.py  test_cat.py  test_extract_images.py  test_extract_text.py  test_join.py  test_rm.py  test_rotate.py  test_secure.py  test_utils.py  test_watermark.py
