[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdforge"
version = "0.1.0"
description = "A command-line utility for modifying PDFs with ease. Perform common PDF operations such as merging, splitting, compressing, and extracting pages, all from your terminal."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name="Victor Alberto", email="victoralbertomhp@gmail.com" }]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pymupdf>=1.25.3",
]

[project.urls]
Homepage = "https://github.com/victormhp/pdforge"
Issues = "https://github.com/victormhp/pdforge/issues"

[project.scripts]
pdforge = "pdforge.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]

[tool.ruff]
line-length = 100
lint.extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
